# VIP_mmWave_HPE_demo

./: .gitignore  README.md  fixes.md  vip_ros2_jazzy_dev.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pytest-core.yml
docs/: group1_todo_10-06-2026.md  group2_todo_10-06-2026.md  point_cloud_access.py  ros2_dev_notes.md
docs/archive/: replay_demo.__launch.py
src/vip_hpe_core/: package.xml  setup.cfg  setup.py
src/vip_hpe_core/config/preprocessing/: dummy_pointcloud.yaml
src/vip_hpe_core/vip_hpe_core/constants/: iwr6843.py  kinect.py  living_lab.py
src/vip_hpe_core/vip_hpe_core/preprocessing/: base.py  config.py  model_input.py  registry.py
src/vip_hpe_msgs/: CMakeLists.txt  package.xml
src/vip_hpe_msgs/msg/: Joint3D.msg  PersonPose3D.msg  PersonPose3DArray.msg  RadarFrame.msg  RadarPoint.msg
src/vip_hpe_runtime/: package.xml  setup.cfg  setup.py
src/vip_hpe_runtime/config/: replay_demo.yaml
src/vip_hpe_runtime/config/sessions/: replay_pc_gt_pose_visualize.yaml
src/vip_hpe_runtime/launch/: session.launch.py
src/vip_hpe_runtime/vip_hpe_runtime/adapters/: ros_conversions.py
src/vip_hpe_runtime/vip_hpe_runtime/launching/: __init__.py  builders.py  config.py  validation.py
src/vip_hpe_runtime/vip_hpe_runtime/nodes/: animated_plot_node.py  live_model_inference_node.py  pose_gt_inference_emulator_node.py  pose_gt_replay_node.py  radar_replay_node.py  replay_base.py
src/vip_hpe_runtime/vip_hpe_runtime/replay/: living_lab.py
src/vip_hpe_runtime/vip_hpe_runtime/visualization/: plotter.py
tests/: README.md
tests/core/: test_core_dependency_boundaries.py  test_dummy_pointcloud_preprocessor.py
tests/ml/: README.md
tests/runtime/: test_living_lab_parser.py
